--- a/charts/test-dags-charts/Chart.yaml
+++ b/charts/test-dags-charts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: test-dag-ci
+name: test-dags-charts
 description: A Helm chart for deploying ZONTAL Spectrophotometry DAGs
 
 type: application
